# python-project-50

./: .coverage  Makefile  README.md  demo1.cast  demo2.cast  demo3.cast  demo4.cast  demo5.cast  pyproject.toml
.github/workflows/: gendiff.yml
gendiff/: __init__.py
gendiff/scripts/: gendiff.py  json_gendiff.py  make_list_from_file.py  plain_gendiff.py  stylish_gendiff.py
tests/: test_gendiff.py
tests/test_data/: expected_flat_yaml.json  expected_json.json  expected_result_2.txt  file3.json  file4.json
